--- a/dwh.cfg
+++ b/dwh.cfg
@@ -1,12 +1,12 @@
 [CLUSTER]
-HOST= 'redshift-cluster.ct2bt2ln4srm.us-west-2.redshift.amazonaws.com'
-DB_NAME= 'dev'
-DB_USER= 'gy0405' 
-DB_PASSWORD= 'pinGuino^6#'
+HOST= ''
+DB_NAME= ''
+DB_USER= '' 
+DB_PASSWORD= ''
 DB_PORT= 5439
 
 [IAM_ROLE]
-ARN=arn:aws:iam::005657187717:role/myRedshiftRole
+ARN=
 
 [S3]
 LOG_DATA='s3://udacity-dend/log_data'
